# ooplab

./: CMakeLists.txt  README.md  files.cmake
Resources/: Goal.txt  TheMapOption.txt
include/: AllInclude.hpp  AnimationObject.hpp  App.hpp  Level.hpp  Level1.hpp  Level2.hpp  Level3.hpp  M_mariO.hpp  MapManerger.hpp  Monster.hpp  ScenceObject.hpp  SceneObject.hpp  StillObject.hpp  m_mariO.hpp
include/Block/:  Bridge.hpp  AirBlock.hpp  Block.hpp  BlueFloorBlock.hpp  BlueFootBlock.hpp  BlueOriginalBlock.hpp  BlueOriginalCoin.hpp  Elevator.hpp  Flag.hpp  FlagBall.hpp  FlagPole.hpp  FloorBlock.hpp  FootBlock.hpp  GrassFloorLeft.hpp  GrassFloorMid.hpp  GrassFloorRight.hpp  HorizontalElevator.hpp  HorizontalPipe_64_64.hpp  LongPipe.hpp  LuckyBlock.hpp  OriginalBlock.hpp  OriginalCoin.hpp  Pipe.hpp  Pipe_64_128.hpp  Pipe_64_64.hpp  Pipe_64_96.hpp  ReElevator.hpp  TreeWall.hpp  VerticalElevator.hpp  WhiteBlock.hpp  flag.hpp
include/Item/: Axe.hpp  Coin_Item.hpp  FireFlower_Item.hpp  Item.hpp  Item_Mushroom .hpp  Mushroom_Item .hpp  Mushroom_Item.hpp  OutSideCoin_Item.hpp  Star_Item.hpp
include/Level/: Level.hpp  Level1.hpp  Level2.hpp  Level3.hpp  Level4.hpp
include/Manager/: BlockManager.hpp  ElevatorManager.hpp  FireBallManager.hpp  GravityManager.hpp  ItemManager.hpp  ManagerManager.hpp  MapManager.hpp  MapManerger.hpp  MarioManager.hpp  MonsterManager.hpp  TImeScoreManager.hpp  TimeManager.hpp  TrapFireBallManager.hpp  flagManager.hpp
include/Map/: Map.hpp
include/Mario/: FireBall.hpp  Mario.hpp  Mario_big.hpp  Mario_fire.hpp  Mario_small.hpp
include/Monsters/: Black_turtle.hpp  BlueTurtle.hpp  Blue_Mushroom.hpp  Eat_flower.hpp  Fly_turtle.hpp  Jump_turtle.hpp  Kooper.hpp  Monster.hpp  Mushroom.hpp  Red_turtle.hpp  Turtle.hpp
include/Object/: AnimationObject.hpp  GravityObject.hpp  ItemObject.hpp  Object.hpp  SceneObject.hpp  StillObject.hpp
include/TImeAndScore/: Score.hpp  Timer.hpp
include/TimeScore/: Score.hpp  Timer.hpp
include/Trap/: KooperFireBall.hpp  TrapFireBall.hpp
src/: App.cpp  AppEnd.cpp  AppStart.cpp  AppTitle.cpp  AppTitleUpdate.cpp  AppUpdate.cpp  M_mariO.cpp  Mario.cpp  Mario_big.cpp  Mario_small.cpp  Mushroom.cpp  Turtle.cpp  m_mariO.cpp  main.cpp
src/App/: App.cpp  main.cpp
src/Block/: AirBlock.cpp  BlueFloorBlock.cpp  BlueFootBlock.cpp  BlueOriginalBlock.cpp  BlueOriginalCoin.cpp  Bridge.cpp  Elevator.cpp  Flag.cpp  FlagBall.cpp  FlagPole.cpp  FloorBlock.cpp  FootBlock.cpp  GrassFloorLeft.cpp  GrassFloorMid.cpp  GrassFloorRight.cpp  HorizontalElevator.cpp  HorizontalPipe_64_64.cpp  LongPipe.cpp  LuckyBlock.cpp  OriginalBlock.cpp  OriginalCoin.cpp  Pipe64_128.cpp  Pipe64_64.cpp  Pipe64_96.cpp  TreeWall.cpp  VerticalElevator.cpp  WhiteBlock.cpp  flag.cpp
src/Item/: Axe.cpp  Coin_Item.cpp  FireFlower_Item.cpp  Mushroom_Item.cpp  OutSideCoin_Item.cpp  Star_Item.cpp
src/Manager/: BlockManager.cpp  ElevatorManager.cpp  FireBallManager.cpp  GravityManager.cpp  ItemManager.cpp  MapManager.cpp  MarioManager.cpp  MonsterManager.cpp  TimeScoreManager.cpp  TrapFireBallManager.cpp  flagManager.cpp
src/Map/: Map.cpp
src/Mario/: FireBall.cpp  Mario.cpp
src/Monster/: Blue_Mushroom.cpp  EatFlower.cpp  Fly_turtle.cpp  Kooper.cpp  Mushroom.cpp  Red_Turtle.cpp  Turtle.cpp
src/TimeScore/: Score.cpp  Timer.cpp
src/Trap/: KooperFireBall.cpp  TrapFireBall.cpp
